test: sanity test